--- a/lab04p01/index.html
+++ b/lab04p01/index.html
@@ -9,19 +9,19 @@
  
 <body>
     <h1>KASYNO</h1>
-    <h3>Wybierz zakład</h3>
+    <h3>Wybierz zakład:</h3>
     <form action="wynik.php" method="post">
         <div>
             <input type="radio" name="gra" id="6z49" value="6z49">
             <label for="6z49">6 z 49</label>
         </div>
         <div>
-            <input type="radio" name="gra" id="5z100" value="5z100">
-            <label for="5z100">5 z 100</label>
+            <input type="radio" name="gra" id="5z30" value="5z30">
+            <label for="5z100">5 z 30</label>
         </div>
         <br>
-        <label for="ilosc-zakladow">Ilość zakładów</label>
-        <input type="number" name="zaklady">
+        <label for="zaklady">Liczba zakładów:</label>
+        <input type="number" name="zaklady" min="1" max="100">
         <br><br>
         <input type="submit" value="Graj">
     </form>
